# readback

./: README.md  pyproject.toml
configs/: models.example.toml
deploy/: docker-compose.vllm.yml
src/readback/: audio.py  cli.py  data.py  dataset.py  dataset_card.md  review.py  schema.py  snapshot.py  store.py  trainset.py
src/readback/callsign/: __init__.py  verify.py
src/readback/fuse/: __init__.py  agreement.py  confidence.py  ger.py  pipeline.py  rover.py  tier.py
src/readback/models/: __init__.py  base.py  canary.py  infer_worker.py  parakeet.py  registry.py  whisper_atc.py
src/readback/pipeline/: __init__.py  fuse.py  ger.py  infer.py  layout.py
src/readback/serve/: __init__.py  client.py  vllm.py
src/readback/server/: api.py  app.py  context.py  shard_cache.py  spa.py  state.py  worklist.py
tests/: test_agreement.py  test_api.py  test_app.py  test_base.py  test_callsign.py  test_cli.py  test_confidence.py  test_context.py  test_data.py  test_dataset.py  test_fuse.py  test_ger.py  test_pipeline_fuse.py  test_pipeline_infer.py  test_registry.py  test_reviews.py  test_rover.py  test_serve_cli.py  test_shard_cache.py  test_snapshot.py  test_spa.py  test_state.py  test_store.py  test_tier.py  test_trainset.py  test_worklist.py
web/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  studio.svelte.ts  types.ts
web/src/lib/components/: AlignedLine.svelte  AudioPlayer.svelte  ClipPane.svelte  Conversation.svelte  DecisionPane.svelte  QueuePane.svelte  ReasonBadge.svelte  TierBadge.svelte  TrackMap.svelte
web/src/lib/components/ui/: Badge.svelte  Button.svelte  Progress.svelte  Textarea.svelte
web/src/routes/: +page.svelte
