[project]
name = "readback"
version = "0.1.0"
description = ""
authors = [{ name = "James Ding", email = "james@twango.dev" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "airwer>=0.2",
  "datasets>=4.8",
  "faster-whisper>=1.1",
  "filelock>=3.13",
  "huggingface-hub>=0.27",
  "nemo-toolkit[asr]>=2.7",
  "numpy>=2",
  "pyarrow>=16",
  "rapidfuzz>=3",
  "soundfile>=0.12",
  "torch>=2.12",
  "torchaudio>=2.11",
  "torchcodec>=0.12",
  "typer>=0.12",
]

[project.scripts]
readback = "readback.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readback"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
airwer = { path = "../airwer", editable = true }

[dependency-groups]
dev = [
  "poethepoet>=0.32",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.14",
  "ty>=0.0.2",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests/", "experiments/"]

[tool.ty.rules]
unused-ignore-comment = "ignore"

[tool.ruff]
target-version = "py312"
extend-exclude = ["experiments"]

[tool.ruff.lint]
extend-select = ["F", "W", "E", "I", "UP", "C4", "FA", "ISC", "ICN", "RET", "SIM", "TID", "TC", "PTH"]
ignore = ["E501", "TC001", "TC002", "TC003"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format --check ."
typecheck = "ty check"
check = ["lint", "format", "typecheck"]
lint-fix = "ruff check --fix ."
format-fix = "ruff format ."
fix = ["lint-fix", "format-fix"]
test = "pytest tests/ -v --cov=src/readback --cov-report=term"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "-m", "not slow"]
markers = [
  "slow: real model / GPU / network",
]
